# causality-research

./: .gitignore  README.md  readme.md  requirements.txt
Code/: b.json  binary_environment.py  cate.ipynb  contingency_X1_X2.csv  contingency_X1_X3.csv  contingency_X2_X1.csv  contingency_X2_X3.csv  contingency_X3_X1.csv  contingency_X3_X2.csv  dag.ipynb  data.csv  databaseBasedSCMGenerator.py  environment.py  foundations_instances_generator.py  game_history.csv  game_instance.json  game_instance.py  game_instances_generator.py  hill_instance.py  intervention_data_X1.csv  intervention_data_X2.csv  intervention_data_X3.csv  main.py  obs_data.csv  old.py  past_data.csv  pc.py  pc_combined.py  pytest.ini  readme.md  requirements.txt  runner.py  samples.csv  scm_data.json  scm_data.pkl  setup.cfg  survey.json  test.py
Code/causalitygame/: __init__.py
Code/causalitygame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Code/causalitygame/agents/: ExhaustiveAgent.py  (+5 more)
Code/instances/: bn_game_instance.json  bn_game_instance.pkl  game_instance-2025-03-11_10-25-08.json  game_instance-2025-03-11_10-25-24.json  game_instance-2025-03-11_10-33-46.json  game_instance-2025-03-13_23-33-35.json  game_instance.json  game_instance.pkl
Code/tests/: samples.py  test_dag.py  test_db_scm.py  test_environment.py  test_game_instance.py  test_outcome_generators.py  test_sample_generation_speed.py  test_scm.py  test_shipped_scms.py
Code/use-cases/: cate_estimation_ideal_gas_instance.py  dag_inference_ideal_gas_instance.py  ideal_gas_instance.py  te_estimation_hill_instance.py  test.py
(+259 files in other folders)
