[metadata]
name = causalitygame
version = 0.1.0
description = A causal inference game simulation engine
author = Sergio Amortegui & Felix Mohr
license = MIT

[options]
packages = find:
install_requires =
    networkx
    pandas
    numpy
    matplotlib
    sympy
    scipy
    joblib
    pytest
    tqdm